# ia-server-santos

./: .gitignore  CLAUDE.md  Makefile  README.md  backend.code-workspace  ia-server-santos.code-workspace  pyproject.toml
agents/: arquitetura.py  chat.py  estruturas.py  geoprocessamento.py  incendio.py  infraestrutura.py  topografia.py  transportes.py
app/: main.py
app/routes/: __init__.py  aed.py  chat.py  copilot.py  models.py  orchestrator.py
app/schemas/: __init__.py  chat.py  copilot.py  health.py  history.py  (+2 more)
backend/: .env.example  README.md  requirements.txt
backup-wsl/: README.md
config/: settings.py
core/: dispatcher.py  intent_layer.py  orchestrator.py  pipeline.py  router.py
docs/: e2e_validation_checklist.md  project_review_engine.md  project_state.md  workflow_projetos_architecture.md
frontend/: .env.cloudflare.example  .env.lan.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
memory/: nbr_catalog.py  pdf_indexer.py  rag_engine.py  retriever.py
models/: ollama_client.py
planilhas-exemplos/: 19_PPD_MC_OR_R01-Nivel-1-2-Marco2026-14-05-2026.xlsm
scripts/: install_libreoffice_wsl.sh  run_auto_tune.py  setup_backend.sh  setup_wsl_lan_access.bat  setup_wsl_lan_access.ps1  smoke_e2e.sh  validate_lan_access.sh  validate_price_bases.sh  validate_project_rag.sh
tests/: test_api.py  test_base_agent_intelligent.py  test_copilot.py  test_database.py  test_evaluation_loop_v2.py  test_memory.py  test_model_router.py  test_orchestrator.py  test_router.py  test_structural_intelligence.py  test_structural_selector.py
(+832 files in other folders)
