[project]
name = "ia-server-santos"
version = "1.0.0"
description = "IA Server Santos — monorepo backend (FastAPI) + frontend (Next.js)"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.coverage.run]
source = ["backend/core", "backend/app/services"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
